Changelog
=========

1.1.3-enfold1 (unreleased)
--------------------------

- Repacking this as 1.1.3-enfold1
  [frapell]


1.1.4-enfold (2014-11-14)
-------------------------

- Nothing changed yet.


1.1.3-enfold (2014-11-14)
-------------------------

- 1.1.2 was bad release, releasing again
  [frapell]


1.1.2-enfold (2014-11-14)
-------------------------

- Add responsive scales support for use with Picturefill
  [frapell]

1.1.2 (2014-10-23)
------------------

- portet tests to plone.app.testing
  [tomgross]


1.1.1 (2014-04-13)
------------------

- Disable csrf protection when scale is generated and traversed to.
  [vangheem]


1.1.0 (2014-02-23)
------------------

- Cache image scales using the plone.stableResource ruleset
  when they are accessed via UID-based URLs.
  [davisagli]

- Move propertysheet imaging_properties and the corresponding
  utilities to Products.CMFPlone.
  https://github.com/plone/plone.app.contenttypes/issues/82
  [pbauer]

- Generate Progressive JPEG.
  [kroman0]


1.0.9 (2013-06-13)
------------------

- Make getQuality always return an integer.


1.0.8 (2013-05-23)
------------------

- Make the quality of scaled images configurable through the configlet.
  https://dev.plone.org/ticket/13337
  [khink]


1.0.7 (2013-03-05)
------------------

* Avoid hard dependency on ATContentTypes.
  [davisagli]

1.0.6 (2012-04-15)
------------------

* Avoid loading an image scale object in order to generate a tag. It's
  expensive because it loads the image data into memory. The
  documentation has been updated to reflect that this is the most
  efficient usage of the API.

1.0.5 - 2011-04-03
------------------

* Fix test now `scale=None` does not raise exception.
  [elro]

1.0.4 - 2011-03-22
------------------

* Add a tag method to @@images to simplify tagging of full sized images.
  [elro]

* Make scale=None return the original image wrapped as an ImageScaling object.
  [elro]

1.0.3 - 2011-02-14
------------------
