@@ -4,6 +4,9 @@ Changelog
 1.1.3-enfold1 (unreleased)
 --------------------------
 
+- Generate ALT tag appending 'Image' to title
+  [frapell]
+
 - Repacking this as 1.1.3-enfold1
   [frapell]
 
